--- a/index.css
+++ b/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+#Sidebar{
+    visibility: hidden;
+}
+aside{
+    visibility: hidden;
+}
+
 html, body {
     scroll-behavior: smooth;
 }
